# photorec-cleaner

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
src/photorec_cleaner/: app_state.py  console_ui.py  controller.py  file_utils.py  gui.py  gui_utils.py  photorec_cleaner.py
src/photorec_cleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/photorec_cleaner/resources/: photorec_cleaner.icns
tests/: test_file_utils.py  test_photorec_cleaner.py
